tests/ui/traits/non_lifetime_binders/missing-assoc-item.rs
#![feature(non_lifetime_binders)]

fn f()
where
    for<B> B::Item: Send,
    //~^ ERROR ambiguous associated type
{
}

fn main() {}
